Add more unit tests for services